--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 <body>
     <header class="text-center py-5">
-        <img  src="/static/Krishna.jpg" width="100" height="100" class="d-block mx-auto mb-3">
-        <img id="logo" src="/static/dhyas logo5.jpg" class="d-block mx-auto mb-3" sizes="10%">
+        <img  src="Krishna.jpg" width="100" height="100" class="d-block mx-auto mb-3">
+        <img id="logo" src="dhyas logo5.jpg" class="d-block mx-auto mb-3" sizes="10%">
         <h4>Presents</h4>
         <!-- <h1 class="display-4">ShyamRang</h1> -->
-        <img id="logo" src="/static/Shyamrang.jpg" class="d-block mx-auto mb-3" sizes="25%">
+        <img id="logo" src="Shyamrang.jpg" class="d-block mx-auto mb-3" sizes="25%">
         <h4><strong>Bharatnatyam Arangetram</strong></h4>
         <h5>by</h5>
         <h3><strong>Kshitija Shastri</strong></h3>
@@ -32,31 +32,31 @@
     <div id="slideshow-container1" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/static/1.jpg" class="d-block w-100 h-100" alt="Image 1">
+                <img src="1.jpg" class="d-block w-100 h-100" alt="Image 1">
             </div>
             <div class="carousel-item">
-                <img src="/static/6.jpg" class="d-block w-100 h-100" alt="Image 2">
+                <img src="6.jpg" class="d-block w-100 h-100" alt="Image 2">
             </div>
             <div class="carousel-item">
-                <img src="/static/4.jpg" class="d-block w-100 h-100" alt="Image 3">
+                <img src="4.jpg" class="d-block w-100 h-100" alt="Image 3">
             </div>
             <div class="carousel-item">
-                <img src="/static/8.jpg" class="d-block w-100 h-100" alt="Image 4">
+                <img src="8.jpg" class="d-block w-100 h-100" alt="Image 4">
             </div>
             <div class="carousel-item">
-                <img src="/static/2.jpg" class="d-block w-100 h-100" alt="Image 5">
+                <img src="2.jpg" class="d-block w-100 h-100" alt="Image 5">
             </div>
             <div class="carousel-item">
-                <img src="/static/3.jpg" class="d-block w-100 h-100" alt="Image 6">
+                <img src="3.jpg" class="d-block w-100 h-100" alt="Image 6">
             </div>
             <div class="carousel-item">
-                <img src="/static/5.jpg" class="d-block w-100 h-100" alt="Image 7">
+                <img src="5.jpg" class="d-block w-100 h-100" alt="Image 7">
             </div>
             <div class="carousel-item">
-                <img src="/static/7.jpg" class="d-block w-100 h-100" alt="Image 8">
+                <img src="7.jpg" class="d-block w-100 h-100" alt="Image 8">
             </div>
             <div class="carousel-item">
-                <img src="/static/9.jpg" class="d-block w-100 h-100" alt="Image 8">
+                <img src="9.jpg" class="d-block w-100 h-100" alt="Image 8">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container1" data-bs-slide="prev">
@@ -102,11 +102,11 @@
             </h3>
             
             <div class="collapse" id="GuruInfo">
-                <!-- <img src="/static/Ketki Tai.JPG" class="float-start me-3" width="15%"> -->
+                <!-- <img src="Ketki Tai.JPG" class="float-start me-3" width="15%"> -->
                 <div id="slideshow-container4" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/static/Ketki Tai.JPG" class="d-block w-100" alt="K1"     >
+                            <img src="Ketki Tai.JPG" class="d-block w-100" alt="K1"     >
                         </div>
                         </div>
                 <div class="card card-body bg-dark mt-3">
@@ -139,25 +139,25 @@
                             <div id="slideshow-container2" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="/static/k2.JPG" class="d-block w-100" alt="K1">
+                                        <img src="k2.JPG" class="d-block w-100" alt="K1">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k3.jpg" class="d-block w-100" alt="K2">
+                                        <img src="k3.jpg" class="d-block w-100" alt="K2">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k5.jpg" class="d-block w-100" alt="K3">
+                                        <img src="k5.jpg" class="d-block w-100" alt="K3">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k6.jpg" class="d-block w-100" alt="K4">
+                                        <img src="k6.jpg" class="d-block w-100" alt="K4">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k1.JPG" class="d-block w-100" alt="K5">
+                                        <img src="k1.JPG" class="d-block w-100" alt="K5">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k4.JPG" class="d-block w-100" alt="K6">
+                                        <img src="k4.JPG" class="d-block w-100" alt="K6">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k7.jpg" class="d-block w-100" alt="K7">
+                                        <img src="k7.jpg" class="d-block w-100" alt="K7">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container2" data-bs-slide="prev">
@@ -234,25 +234,25 @@
                             <div id="slideshow-container3" class="carousel slide" data-bs-ride="carousel">
                                         <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="/static/s1.JPG" class="d-block w-100" alt="K1">
+                                        <img src="s1.JPG" class="d-block w-100" alt="K1">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s4.jpg" class="d-block w-100" alt="K2">
+                                        <img src="s4.jpg" class="d-block w-100" alt="K2">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s6.jpg" class="d-block w-100" alt="K3">
+                                        <img src="s6.jpg" class="d-block w-100" alt="K3">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s2.JPG" class="d-block w-100" alt="K4">
+                                        <img src="s2.JPG" class="d-block w-100" alt="K4">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s3.JPG" class="d-block w-100" alt="K5">
+                                        <img src="s3.JPG" class="d-block w-100" alt="K5">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s5.jpg" class="d-block w-100" alt="K6">
+                                        <img src="s5.jpg" class="d-block w-100" alt="K6">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s7.jpg" class="d-block w-100" alt="K7">
+                                        <img src="s7.jpg" class="d-block w-100" alt="K7">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container3" data-bs-slide="prev">
@@ -427,25 +427,25 @@
                 <div id="slideshow-container5" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/static/N1.jpg" class="d-block w-100" alt="K1">
+                            <img src="N1.jpg" class="d-block w-100" alt="K1">
                             </div>
                         <div class="carousel-item">
-                            <img src="/static/N2.jpg" class="d-block w-100" alt="K2">
+                            <img src="N2.jpg" class="d-block w-100" alt="K2">
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N3.jpg" class="d-block w-100" alt="K3">
+                            <img src="N3.jpg" class="d-block w-100" alt="K3">
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N4.jpg" class="d-block w-100" alt="K4">
+                            <img src="N4.jpg" class="d-block w-100" alt="K4">
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N5.jpg" class="d-block w-100" alt="K5">
+                            <img src="N5.jpg" class="d-block w-100" alt="K5">
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N6.jpg" class="d-block w-100" alt="K6">
+                            <img src="N6.jpg" class="d-block w-100" alt="K6">
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N7.jpg" class="d-block w-100" alt="K7">
+                            <img src="N7.jpg" class="d-block w-100" alt="K7">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container5" data-bs-slide="prev">
