--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kshitija and Sanruddhi Arangetram Invitation</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,47 +16,47 @@
 </head>
 <body>
     <header class="text-center py-5">
-        <img  src="Krishna.jpg" width="100" height="100" class="d-block mx-auto mb-3">
-        <img id="logo" src="dhyas logo5.jpg" class="d-block mx-auto mb-3" sizes="10%">
-        <h4>Presents</h4>
+        <!-- <img  src="/static/Krishna.jpg" width="100" height="100" class="d-block mx-auto mb-3"> -->
+        <img id="logo" src="/static/dhyas logo5.jpg" class="d-block mx-auto mb-3" sizes="10%">
+        <h4 style="color: rgb(237, 237, 237); font-size: 24px; font-family: 'Georgia', cursive;">Presents</h4>
         <!-- <h1 class="display-4">ShyamRang</h1> -->
-        <img id="logo" src="Shyamrang.jpg" class="d-block mx-auto mb-3" sizes="25%">
-        <h4><strong>Bharatnatyam Arangetram</strong></h4>
+        <img id="logo" src="/static/Shyamrang.jpg" class="d-block mx-auto mb-3" sizes="25%">
+        <h4 style="color: rgb(237, 237, 237); font-size: 24px; font-family: 'Georgia', cursive;"><strong>Bharatnatyam Arangetram</strong></h4>
         <h5>by</h5>
-        <h3><strong>Kshitija Shastri</strong></h3>
+        <h3 style="color: rgb(255, 170, 0); font-size: 24px; font-family: 'Georgia', cursive;"><strong>Kshitija Shastri</strong></h3>
         <h5>&</h5>
-        <h3><strong>Samruddhi Bhande</strong></h3>
+        <h3 style="color: rgb(255, 170, 0); font-size: 24px; font-family: 'Georgia', cursive"><strong>Samruddhi Bhande</strong></h3>
     </header>
 
     <!-- First Slideshow Section -->
     <div id="slideshow-container1" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="1.jpg" class="d-block w-100 h-100" alt="Image 1">
+                <img src="/static/1.jpg" class="d-block w-100 h-100" alt="Image 1">
             </div>
             <div class="carousel-item">
-                <img src="6.jpg" class="d-block w-100 h-100" alt="Image 2">
+                <img src="/static/6.jpg" class="d-block w-100 h-100" alt="Image 2">
             </div>
             <div class="carousel-item">
-                <img src="4.jpg" class="d-block w-100 h-100" alt="Image 3">
+                <img src="/static/4.jpg" class="d-block w-100 h-100" alt="Image 3">
             </div>
             <div class="carousel-item">
-                <img src="8.jpg" class="d-block w-100 h-100" alt="Image 4">
+                <img src="/static/8.jpg" class="d-block w-100 h-100" alt="Image 4">
             </div>
             <div class="carousel-item">
-                <img src="2.jpg" class="d-block w-100 h-100" alt="Image 5">
+                <img src="/static/2.jpg" class="d-block w-100 h-100" alt="Image 5">
             </div>
             <div class="carousel-item">
-                <img src="3.jpg" class="d-block w-100 h-100" alt="Image 6">
+                <img src="/static/3.jpg" class="d-block w-100 h-100" alt="Image 6">
             </div>
             <div class="carousel-item">
-                <img src="5.jpg" class="d-block w-100 h-100" alt="Image 7">
+                <img src="/static/5.jpg" class="d-block w-100 h-100" alt="Image 7">
             </div>
             <div class="carousel-item">
-                <img src="7.jpg" class="d-block w-100 h-100" alt="Image 8">
+                <img src="/static/7.jpg" class="d-block w-100 h-100" alt="Image 8">
             </div>
             <div class="carousel-item">
-                <img src="9.jpg" class="d-block w-100 h-100" alt="Image 8">
+                <img src="/static/9.jpg" class="d-block w-100 h-100" alt="Image 8">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container1" data-bs-slide="prev">
@@ -102,15 +102,22 @@
             </h3>
             
             <div class="collapse" id="GuruInfo">
-                <!-- <img src="Ketki Tai.JPG" class="float-start me-3" width="15%"> -->
+                <!-- <img src="/static/Ketki Tai.JPG" class="float-start me-3" width="15%"> -->
                 <div id="slideshow-container4" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="Ketki Tai.JPG" class="d-block w-100" alt="K1"     >
+                            <img src="/static/Ketki Tai.JPG" class="d-block w-100" alt="K1"     >
+                             <!-- Social Media Links -->
+                             <div class="d-flex justify-content-evenly">
+                                <a href="https://youtube.com/@dhyasperformingarts9566?si=pMky26Ok_hhOh12v" class="fa fa-youtube-play"></a>
+                                <a href="https://www.instagram.com/ketki_nevpurkar?igsh=ajdnendzM2UydzJj" class="fa fa-instagram"></a>
+                                <a href="https://www.facebook.com/ketki.pakhalenevpurkar?mibextid=ZbWKwL" class="fa fa-facebook"></a>
+                            </div>
                         </div>
                         </div>
                 <div class="card card-body bg-dark mt-3">
                     <strong>Smt. Ketki Nevpurkar</strong>
+                    <br>
                     <p>Smt. Ketki Sachin Nevpurkar, the Director of Dhyas Performing Arts, is a versatile classical dancer with a deep-rooted passion for Bharatanatyam. Her journey began at the age of 6 under the tutelage of renowned Guru Nritya Shiromani Late Smt. Meera Pauskar in Aurangabad. Over the years, she earned multiple academic degrees, including an M.A. in Bharatanatyam and Nritya Prabhakar. In 1998, she performed her ‘Arangetram’ before a distinguished audience.</p>
                     <p>In 2022, Smt. Ketki diligently completed her Alankar Purna in Bharatanatyam from Gandharva Mahavidyalaya. She became a Recognized Artist of Doordarshan, showcasing her talent on a national platform. Further enriching her skills, she trained under internationally renowned Guru Dr. Sucheta Bhide Chapekar in Pune and Mrs. Arundhati Patwardhan, a disciple of Guru Dr. Sucheta Bhide Chapekar.</p>
                     <p>Smt. Ketki’s rich repertoire has graced various festivals across India and abroad, including Germany, Thailand, Sri Lanka, and Dubai. Her accolades include the ‘Gururatna Award’ and the “Gurugaurav Puraskar” from Rotary Club. Under her guidance, students have achieved Arangetram and Nrutyanjali milestones, and one student even secured the CCRT National Level Scholarship.</p>
@@ -139,25 +146,25 @@
                             <div id="slideshow-container2" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="k2.JPG" class="d-block w-100" alt="K1">
+                                        <img src="/static/k2.JPG" class="d-block w-100" alt="K1">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="k3.jpg" class="d-block w-100" alt="K2">
+                                        <img src="/static/k3.jpg" class="d-block w-100" alt="K2">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="k5.jpg" class="d-block w-100" alt="K3">
+                                        <img src="/static/k5.jpg" class="d-block w-100" alt="K3">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="k6.jpg" class="d-block w-100" alt="K4">
+                                        <img src="/static/k6.jpg" class="d-block w-100" alt="K4">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="k1.JPG" class="d-block w-100" alt="K5">
+                                        <img src="/static/k1.JPG" class="d-block w-100" alt="K5">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="k4.JPG" class="d-block w-100" alt="K6">
+                                        <img src="/static/k4.JPG" class="d-block w-100" alt="K6">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="k7.jpg" class="d-block w-100" alt="K7">
+                                        <img src="/static/k7.jpg" class="d-block w-100" alt="K7">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container2" data-bs-slide="prev">
@@ -234,25 +241,25 @@
                             <div id="slideshow-container3" class="carousel slide" data-bs-ride="carousel">
                                         <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="s1.JPG" class="d-block w-100" alt="K1">
+                                        <img src="/static/s1.JPG" class="d-block w-100" alt="K1">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="s4.jpg" class="d-block w-100" alt="K2">
+                                        <img src="/static/s4.jpg" class="d-block w-100" alt="K2">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="s6.jpg" class="d-block w-100" alt="K3">
+                                        <img src="/static/s6.jpg" class="d-block w-100" alt="K3">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="s2.JPG" class="d-block w-100" alt="K4">
+                                        <img src="/static/s2.JPG" class="d-block w-100" alt="K4">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="s3.JPG" class="d-block w-100" alt="K5">
+                                        <img src="/static/s3.JPG" class="d-block w-100" alt="K5">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="s5.jpg" class="d-block w-100" alt="K6">
+                                        <img src="/static/s5.jpg" class="d-block w-100" alt="K6">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="s7.jpg" class="d-block w-100" alt="K7">
+                                        <img src="/static/s7.jpg" class="d-block w-100" alt="K7">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container3" data-bs-slide="prev">
@@ -380,10 +387,10 @@
                 <div class="collapse" id="MusicianInfo">
                     <div class="card card-body bg-dark mt-3">
                         <p><strong>Natuvangam: </strong> Smt. Ketki Nevpurkar</p>
-                        <p><strong>Vocal: </strong> Dr. Somiya Nedungadi</p>
-                        <p><strong>Mridangam: </strong> Shri. </p>
-                        <p><strong>Violin: </strong> Shri. </p>
-                        <p><strong>Flute:  </strong> Shri. </p>
+                        <p><strong>Vocal: </strong> Dr. Somiya N</p>
+                        <p><strong>Mridangam: </strong> Shri. Dakshinamurthy </p>
+                        <p><strong>Violin: </strong> Shri. Balasubramanian R sarma</p>
+                        <p><strong>Flute:  </strong> Shri. Girish Kale</p>
                     </div>
                 </div>
             </div>
@@ -427,25 +434,87 @@
                 <div id="slideshow-container5" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="N1.jpg" class="d-block w-100" alt="K1">
+                            <img src="/static/N1.jpg" class="d-block w-100" alt="K1">
+                            <figcaption style="text-align: center;"> Nrityajali 2019 </figcaption>
                             </div>
                         <div class="carousel-item">
-                            <img src="N2.jpg" class="d-block w-100" alt="K2">
+                            <img src="/static/N2.jpg" class="d-block w-100" alt="K2">
+                            <figcaption style="text-align: center;"> Nrityajali 2019 </figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="N3.jpg" class="d-block w-100" alt="K3">
+                            <img src="/static/N3.jpg" class="d-block w-100" alt="K3">
+                            <figcaption style="text-align: center;"> Nrityajali 2019 </figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="N4.jpg" class="d-block w-100" alt="K4">
+                            <img src="/static/N4.jpg" class="d-block w-100" alt="K4">
+                            <figcaption style="text-align: center;"> Ahmedabad 2023</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="N5.jpg" class="d-block w-100" alt="K5">
+                            <img src="/static/N5.jpg" class="d-block w-100" alt="K5">
+                            <figcaption style="text-align: center;"> Ahmedabad 2023</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="N6.jpg" class="d-block w-100" alt="K6">
+                            <img src="/static/N6.jpg" class="d-block w-100" alt="K6">
+                            <figcaption style="text-align: center;"> Ahmedabad 2023</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="N7.jpg" class="d-block w-100" alt="K7">
+                            <img src="/static/N7.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Ahmedabad 2023</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N8.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Ahmedabad 2023</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N9.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Pratibhotsavam 2023</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N10.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Pratibhotsavam 2023</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N11.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Pratibhotsavam 2023</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N13.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Sashtra Sena</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N14.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Sri Lanka 2016</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N15.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Sri Lanka 2016</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N16.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Sri Lanka 2016</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N17.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Sri Lanka 2016</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N18.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Sri Lanka 2016</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N19.png" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Dubai 2017</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N20.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Dubai 2017</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N21.jpg" class="d-block w-100" alt="K7">
+                            <figcaption style="text-align: center;"> Dubai 2017</figcaption>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/N22.jpg" class="d-block w-100" alt="K7">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container5" data-bs-slide="prev">
@@ -499,6 +568,6 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
+  <script src="/static/script.js"></script>
 </body>
 </html>
