--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img id="logo" src="dhyas logo5.jpg" class="d-block mx-auto mb-3" sizes="10%">
         <h4 style="color: rgb(237, 237, 237); font-size: 24px; font-family: 'Georgia', cursive;">Presents</h4>
         <!-- <h1 class="display-4">ShyamRang</h1> -->
-        <img id="logo" src="Shyamrang1.jpg" class="d-block mx-auto mb-3" sizes="25%">
+        <img id="logo" src="Shyamrang1.jpg.png" class="d-block mx-auto mb-3" sizes="25%">
         <h4 style="color: rgb(237, 237, 237); font-size: 24px; font-family: 'Georgia', cursive;"><strong>Bharatnatyam Arangetram</strong></h4>
         <h5>by</h5>
         <h3 style="color: rgb(255, 170, 0); font-size: 24px; font-family: 'Georgia', cursive;"><strong>Kshitija Shastri</strong></h3>
